--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -3,15 +3,16 @@
   padding-right: 15px;
   @include centeredMargin;
 
-  @media screen and (min-width: 480px) {
-    width: 480px;
+  @media screen and (min-width: $mobile-bp) {
+    width: $mobile-bp;
+    margin: 0 auto;
   }
 
-  @media screen and (min-width: 768px) {
-    width: 768px;
+  @media screen and (min-width: $tablet-bp) {
+    width: $tablet-bp;
   }
 
-  @media screen and (min-width: 1200px) {
-    width: 1200px;
+  @media screen and (min-width: $desktop-bp) {
+    width: $desktop-bp;
   }
 }
