--- a/sass/components/_footer-subscribe.scss
+++ b/sass/components/_footer-subscribe.scss
@@ -1,5 +1,5 @@
 .subscribe-form {
-  @media screen and (min-width: $mobile-bp) {
+  @media screen and (min-width: $tablet-bp) {
     display: flex;
     justify-content: center;
     align-items: flex-end;
@@ -34,7 +34,7 @@
   border-radius: 4px;
   outline: none;
 
-  @media screen and (min-width: $mobile-bp) {
+  @media screen and (min-width: $tablet-bp) {
     width: 358px;
   }
 }
@@ -43,7 +43,7 @@
   padding-left: 16px;
   margin-bottom: 20px;
 
-  @media screen and (min-width: $mobile-bp) {
+  @media screen and (min-width: $tablet-bp) {
     margin-bottom: 0;
   }
 }
@@ -54,7 +54,7 @@
   }
   @include transition(background-color);
 
-  @media screen and (max-width: 479px) {
+  @media screen and (max-width: $tablet-bp) {
     margin-left: auto;
     margin-right: auto;
   }
