--- a/sass/components/_header-contacts.scss
+++ b/sass/components/_header-contacts.scss
@@ -1,24 +1,32 @@
 .header-contacts {
   display: none;
 
-  @media screen and (min-width: $mobile-bp) {
+  @media screen and (min-width: $tablet-bp) and (max-width: 1199px) {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+  }
+
+  @media screen and (min-width: $desktop-bp) {
     display: flex;
     gap: 30px;
   }
 }
 
 .header-contacts__link {
-  display: flex;
-  align-items: center;
-  column-gap: 10px;
-  padding: 32px 0px;
-
   color: $primary-text-color;
   fill: currentcolor;
   font-weight: 500;
   line-height: 1.14;
   text-decoration: none;
   letter-spacing: 0.02em;
+
+  @media screen and (min-width: $desktop-bp) {
+    display: flex;
+    align-items: center;
+    column-gap: 10px;
+    padding: 32px 0px;
+  }
 
   &:hover,
   &:focus {
