--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,6 +1,10 @@
 .header {
   border-bottom: 1px solid #ececec;
-  padding: 16px 15px;
+
+  @media screen and (max-width: 767px) {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
 }
 
 .burger-button {
@@ -18,13 +22,13 @@
   background-color: inherit;
   cursor: pointer;
 
-  @media screen and (min-width: $mobile-bp) {
+  @media screen and (min-width: $tablet-bp) {
     display: none;
   }
 }
 
 .header_flex {
-  @media screen and (min-width: $mobile-bp) {
+  @media screen and (min-width: $tablet-bp) {
     display: flex;
     justify-content: space-between;
     align-items: center;
