--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -6,12 +6,13 @@
   // background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
   //   url(../images/hero.jpg);
   // @include imgCentered;
-  max-width: 767px;
+  max-width: 480px;
   height: 400px;
 
   background-color: $hero-color;
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../../images/Hero-mobile@1x.jpg);
+
   @include imgCentered;
 }
 
@@ -21,6 +22,21 @@
   .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url(../../images/Hero-mobile@2x.jpg);
+  }
+}
+
+@media screen and (min-width: $tablet-bp) and (max-width: 1199px) {
+  .hero {
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../../images/Hero-tablet@1x.jpg);
+    max-width: 768px;
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../../images/Hero-tablet@2x.jpg);
+    }
   }
 }
 
