--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -11,11 +11,17 @@
   padding-bottom: 60px;
 }
 
-// .team-list {
-//   display: flex;
-//   justify-content: center;
-//   gap: 30px;
-// }
+.team-list {
+  // display: flex;
+  // justify-content: center;
+  // gap: 30px;
+
+  @media screen and (min-width: $tablet-bp) and (max-width: 1199px) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+}
 
 .team-list__item {
   // width: calc((100%-90) / 4);
@@ -25,10 +31,14 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 
-  // only mobileversion
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
 
-  &:not(:last-child) {
-    margin-bottom: 30px;
+  @media screen and (min-width: $tablet-bp) and (max-width: 1199px) {
+    width: calc((100% - 30px) / 2);
   }
 }
 
