--- a/css/main.css
+++ b/css/main.css
@@ -713,23 +713,18 @@ img {
   padding-bottom: 60px;
 }
 
-@media screen and (min-width: 1200px) {
-  .footer-navigation {
+@media screen and (min-width: 768px) {
+  .footer-thumb {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
-    -webkit-column-gap: 70px;
-       -moz-column-gap: 70px;
-            column-gap: 70px;
   }
 }
-
 .address-list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -741,6 +736,11 @@ img {
   row-gap: 8px;
   text-align: center;
   margin-bottom: 70px;
+}
+@media screen and (min-width: 768px) {
+  .address-list {
+    margin-bottom: 60px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .address-list {
@@ -810,6 +810,20 @@ img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscribe-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -848,6 +862,11 @@ img {
 }
 @media screen and (min-width: 768px) {
   .subscribe-form__input {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .subscribe-form__input {
     width: 358px;
   }
 }
@@ -856,7 +875,7 @@ img {
   padding-left: 16px;
   margin-bottom: 20px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .subscribe-form__input-padding-margin {
     margin-bottom: 0;
   }
@@ -873,7 +892,7 @@ img {
 .button__footer:hover {
   background-color: #188ce8;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1200px) {
   .button__footer {
     margin-left: auto;
     margin-right: auto;
