--- a/css/main.css
+++ b/css/main.css
@@ -229,6 +229,11 @@ img {
           justify-content: center;
   margin-bottom: 20px;
 }
+@media screen and (min-width: 1200px) {
+  .logo_footer-margin-botom {
+    display: block;
+  }
+}
 
 .navigation {
   display: -webkit-box;
@@ -240,6 +245,11 @@ img {
   -webkit-column-gap: 87px;
      -moz-column-gap: 87px;
           column-gap: 87px;
+}
+@media screen and (min-width: 1200px) {
+  .navigation {
+    gap: 92px;
+  }
 }
 
 .navigation__list {
@@ -348,9 +358,9 @@ img {
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .hero {
+    max-width: 768px;
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/Hero-tablet@1x.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/Hero-tablet@1x.jpg);
-    max-width: 768px;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 2dppx) {
@@ -359,11 +369,31 @@ img {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/Hero-tablet@2x.jpg);
   }
 }
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+    height: 600px;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/Hero-desktop@1x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/Hero-desktop@1x.jpg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../../images/Hero-desktop@2x.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/Hero-desktop@2x.jpg);
+  }
+}
 .hero_margin-padding {
   padding-top: 118px;
   padding-bottom: 118px;
   margin-left: auto;
   margin-right: auto;
+}
+@media screen and (min-width: 1200px) {
+  .hero_margin-padding {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .hero__title {
@@ -375,6 +405,13 @@ img {
   line-height: 1.6;
   text-transform: uppercase;
   letter-spacing: 0.06em;
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    max-width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .hero__title_margin {
@@ -399,6 +436,11 @@ img {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 1200px) {
+  .button_hero-padding {
+    padding: 10px 32px;
+  }
+}
 .button_hero-padding:hover, .button_hero-padding:focus {
   background-color: #188ce8;
 }
@@ -406,6 +448,12 @@ img {
 .advances {
   padding-top: 60px;
   padding-bottom: 60px;
+}
+@media screen and (min-width: 1200px) {
+  .advances {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -418,7 +466,7 @@ img {
     gap: 30px;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) and (min-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .advances__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -438,6 +486,11 @@ img {
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .advances__item {
     width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advances__item {
+    width: calc((100% - 90px) / 4);
   }
 }
 
@@ -477,7 +530,7 @@ img {
   text-align: center;
   text-transform: uppercase;
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .advances__subtitle {
     text-align: left;
   }
@@ -554,6 +607,12 @@ img {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+@media screen and (min-width: 1200px) {
+  .team_padding {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .team-list {
@@ -562,6 +621,17 @@ img {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    gap: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .team-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     gap: 30px;
   }
 }
@@ -582,10 +652,20 @@ img {
     width: calc((100% - 30px) / 2);
   }
 }
+@media screen and (min-width: 1200px) {
+  .team-list__item {
+    width: calc((100%-90) / 4);
+  }
+}
 
 .team-list__content {
   padding-top: 30px;
   padding-bottom: 24px;
+}
+@media screen and (min-width: 1200px) {
+  .team-list__content {
+    padding: 30px 0;
+  }
 }
 
 .team-list__name {
@@ -725,6 +805,34 @@ img {
             align-items: baseline;
   }
 }
+@media screen and (min-width: 1200px) {
+  .footer-thumb {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    -webkit-column-gap: 70px;
+       -moz-column-gap: 70px;
+            column-gap: 70px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-navigation {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -webkit-column-gap: 70px;
+       -moz-column-gap: 70px;
+            column-gap: 70px;
+  }
+}
+
 .address-list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -777,6 +885,11 @@ img {
   text-align: center;
   color: #ffffff;
 }
+@media screen and (min-width: 1200px) {
+  .join-container__text {
+    text-align: left;
+  }
+}
 
 .join-container__text_margin {
   margin-bottom: 20px;
@@ -805,7 +918,7 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .subscribe-form {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -844,6 +957,11 @@ img {
   text-transform: uppercase;
   text-align: center;
   color: #ffffff;
+}
+@media screen and (min-width: 1200px) {
+  .subscribe-form__label {
+    text-align: left;
+  }
 }
 
 .subscribe-form__label_margin {
@@ -1088,8 +1206,6 @@ img {
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  width: 450px;
-  height: 609px;
   padding: 40px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1300,10 +1416,38 @@ img {
 }
 
 .mobile-menu {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   padding: 48px 40px;
+  background-color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 .mobile-menu-close-button {
@@ -1334,9 +1478,7 @@ img {
 }
 
 .mobile-menu-nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  height: 100%;
   margin-bottom: auto;
 }
 
@@ -1349,7 +1491,6 @@ img {
       -ms-flex-direction: column;
           flex-direction: column;
   row-gap: 32px;
-  margin-bottom: auto;
 }
 
 .mobile-menu-nav__link {
