--- a/sass/components/_advances.scss
+++ b/sass/components/_advances.scss
@@ -1,6 +1,11 @@
 .advances {
   padding-top: 60px;
   padding-bottom: 60px;
+
+  @media screen and (min-width: $desktop-bp) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .advances__list {
@@ -8,12 +13,12 @@
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+  }
 
-    @media screen and (min-width: $desktop-bp) {
-      display: flex;
-      justify-content: center;
-      column-gap: 30px;
-    }
+  @media screen and (min-width: $desktop-bp) {
+    display: flex;
+    justify-content: center;
+    column-gap: 30px;
   }
 }
 
@@ -22,6 +27,10 @@
 
   @media screen and (min-width: $tablet-bp) and (max-width: 1199px) {
     width: calc((100% - 30px) / 2);
+  }
+
+  @media screen and (min-width: $desktop-bp) {
+    width: calc((100% - 90px) / 4);
   }
 }
 
@@ -54,7 +63,7 @@
   text-align: center;
   text-transform: uppercase;
 
-  @media screen and (min-width: $tablet-bp) and (max-width: 1199px) {
+  @media screen and (min-width: $tablet-bp) {
     text-align: left;
   }
 }
