--- a/sass/components/_footer-subscribe.scss
+++ b/sass/components/_footer-subscribe.scss
@@ -1,5 +1,5 @@
 .subscribe-form {
-  @media screen and (min-width: $tablet-bp) {
+  @media screen and (min-width: $tablet-bp) and (max-width: 1199px) {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,6 +23,10 @@
   text-align: center;
 
   color: $color-white;
+
+  @media screen and (min-width: $desktop-bp) {
+    text-align: left;
+  }
 }
 
 .subscribe-form__label_margin {
