--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,11 +1,4 @@
 .hero {
-  // max-width: 1600px;
-  // height: 600px;
-
-  // background-color: $hero-color;
-  // background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-  //   url(../images/hero.jpg);
-  // @include imgCentered;
   max-width: 480px;
   height: 400px;
 
@@ -27,9 +20,9 @@
 
 @media screen and (min-width: $tablet-bp) and (max-width: 1199px) {
   .hero {
+    max-width: 768px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url(../../images/Hero-tablet@1x.jpg);
-    max-width: 768px;
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
@@ -40,28 +33,51 @@
   }
 }
 
+@media screen and (min-width: $desktop-bp) {
+  .hero {
+    max-width: 1600px;
+    height: 600px;
+
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../../images/Hero-desktop@1x.jpg);
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url(../../images/Hero-desktop@2x.jpg);
+    }
+  }
+}
+
 .hero_margin-padding {
-  // padding-top: 200px;
-  // padding-bottom: 200px;
   padding-top: 118px;
   padding-bottom: 118px;
   @include centeredMargin;
+
+  @media screen and (min-width: $desktop-bp) {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .hero__title {
-  // max-width: 696px;
   max-width: 360px;
   text-align: center;
 
   color: $color-white;
 
-  // font-size: 44px;
-  // line-height: 1.36;
   font-size: 26px;
   font-weight: 900;
   line-height: 1.6;
   text-transform: uppercase;
   letter-spacing: 0.06em;
+
+  @media screen and (min-width: $desktop-bp) {
+    max-width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .hero__title_margin {
@@ -77,8 +93,12 @@
 .button_hero-padding {
   display: block;
   padding: 10px 24px;
-  // padding: 10px 32px;
+
   margin: 0 auto;
+
+  @media screen and (min-width: $desktop-bp) {
+    padding: 10px 32px;
+  }
 
   &:hover,
   &:focus {
