--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -20,4 +20,8 @@
   display: flex;
   justify-content: center;
   margin-bottom: 20px;
+
+  @media screen and (min-width: $desktop-bp) {
+    display: block;
+  }
 }
