--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,8 +1,22 @@
 .mobile-menu {
-  position: relative;
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   padding: 48px 40px;
+  background-color: $color-white;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  transform: translateX(100%);
+  @include transition(transform);
+}
+
+.is-open {
+  transform: translateX(0);
 }
 
 .mobile-menu-close-button {
@@ -29,7 +43,7 @@
 }
 
 .mobile-menu-nav {
-  display: flex;
+  height: 100%;
   margin-bottom: auto;
 }
 
@@ -37,7 +51,6 @@
   display: flex;
   flex-direction: column;
   row-gap: 32px;
-  margin-bottom: auto;
 }
 
 .mobile-menu-nav__link {
