--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -4,28 +4,30 @@
 }
 
 .team_padding {
-  // padding-top: 94px;
-  // padding-bottom: 94px;
-
   padding-top: 60px;
   padding-bottom: 60px;
+
+  @media screen and (min-width: $desktop-bp) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .team-list {
-  // display: flex;
-  // justify-content: center;
-  // gap: 30px;
-
   @media screen and (min-width: $tablet-bp) and (max-width: 1199px) {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
   }
+
+  @media screen and (min-width: $desktop-bp) {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+  }
 }
 
 .team-list__item {
-  // width: calc((100%-90) / 4);
-
   background-color: $color-white;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -40,12 +42,19 @@
   @media screen and (min-width: $tablet-bp) and (max-width: 1199px) {
     width: calc((100% - 30px) / 2);
   }
+
+  @media screen and (min-width: $desktop-bp) {
+    width: calc((100%-90) / 4);
+  }
 }
 
 .team-list__content {
-  // padding: 30px 0;
   padding-top: 30px;
   padding-bottom: 24px;
+
+  @media screen and (min-width: $desktop-bp) {
+    padding: 30px 0;
+  }
 }
 
 .team-list__name {
