--- a/sass/components/_photo-section.scss
+++ b/sass/components/_photo-section.scss
@@ -9,6 +9,11 @@
   text-align: center;
 }
 
+// .title_photo-section {
+//   font-size: 36px;
+//   margin-bottom: 50px;
+// }
+
 .photo-section__list {
   display: flex;
   justify-content: center;
