--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -6,6 +6,10 @@
   line-height: 1.2;
   text-decoration: none;
   letter-spacing: 0.03em;
+
+  @media screen and (min-width: $desktop-bp) {
+    font-size: 26px;
+  }
 }
 
 .logo_header-black {
