--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -5,8 +5,6 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  padding-left: 15px;
-  padding-right: 15px;
 
   @include transition(opacity, visibility);
 }
@@ -18,9 +16,8 @@
   transform: translate(-50%, -50%) scale(1);
   @include transition(transform);
 
-  // max-width: 450px;
-  // max-height: 609px;
   padding: 40px;
+  max-width: 450px;
 
   background-color: $color-white;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -29,6 +26,15 @@
 
   .backdrop.is-hidden & {
     transform: translate(-50%, -50%) scale(0);
+  }
+
+  @media screen and (min-width: $mobile-bp) and (max-width: 1199px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: $desktop-bp) {
+    min-width: 528px;
+    height: 581px;
   }
 }
 
@@ -60,9 +66,12 @@
 
   font-weight: 700;
   font-size: 20px;
-  // line-height: 1.15;
   line-height: 1.5;
   text-align: center;
 
   color: $title-text-color;
+
+  @media screen and (min-width: $desktop-bp) {
+    line-height: 1.15;
+  }
 }
