--- a/sass/components/_portfolio-list.scss
+++ b/sass/components/_portfolio-list.scss
@@ -1,13 +1,22 @@
-.works-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
+// .works-list {
+//   display: flex;
+//   flex-wrap: wrap;
+//   gap: 30px;
+// }
+
+@media screen and (max-width: 767px) {
+  .works-list__item {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
 }
 
 .works-list__link {
   display: block;
   text-decoration: none;
-  max-width: 370px;
+  // max-width: 370px;
+  max-width: 100%;
 
   position: relative;
 
@@ -31,7 +40,9 @@
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 63px 24px;
+  // padding: 63px 24px;
+  padding: 77px 24px;
+
   background-color: $works-photo-bgc;
   transform: translateY(100%);
 
@@ -47,14 +58,20 @@
   color: $color-white;
   font-size: 18px;
   line-height: 1.56;
+  text-align: center;
 }
 
 .works-list__decor {
   padding: 20px 24px;
-  max-width: 370px;
+  // max-width: 370px;
+  max-width: 100%;
   border-left: 1px solid $works-border-color;
   border-right: 1px solid $works-border-color;
   border-bottom: 1px solid $works-border-color;
+
+  @media screen and (min-width: $tablet-bp) and (max-width: 1199px) {
+    padding: 20px 24px 56px 24px;
+  }
 }
 
 .works-list__title {
