--- a/sass/utils/_title.scss
+++ b/sass/utils/_title.scss
@@ -6,4 +6,9 @@
   line-height: 1.17;
 
   color: $title-text-color;
+
+  @media screen and (min-width: $desktop-bp) {
+    font-size: 36px;
+    margin-bottom: 50px;
+  }
 }
